Add Expo push notification support
